GeditDocument: "loaded" and "saved" signals: run_last -> run_first

The object method handlers must be run first, so that the document is
fully loaded/saved, with the GtkSourceLanguage set etc.

https://bugzilla.gnome.org/show_bug.cgi?id=741545